# curly-garbanzo

./: PicoSpoofer.slnx  README.md
PicoSpoofer/: CMakeLists.txt  PicoSpoofer.vcxproj
PicoSpoofer/src/: Driver.cpp  anticheat.cpp  anticheat.h  driver_comm.cpp  driver_comm.h  driver_data.h  main.cpp  mapper.cpp  mapper.h  service.cpp  service.h
PicoSpoofer/src/ETW/: ETWInitializer.cpp  ETWInitializer.h
PicoSpoofer/src/Hooks/: HookManager.cpp  HookManager.h
PicoSpoofer/src/Hooks/Eabuffer/: EaBufferHook.cpp  EaBufferHook.h
PicoSpoofer/src/Hooks/FileHooks/: FileHooks.cpp  FileHooks.h
PicoSpoofer/src/Internals/SystemInfo/: SystemInfo.cpp  SystemInfo.h
PicoSpoofer/src/Utils/: Utils.cpp  Utils.h
PicoSpoofer/src/Utils/PatternScan/: PatternScan.cpp  PatternScan.h
